navbar and headers

--- a/app/views/pages/home.html.erb
+++ b/app/views/pages/home.html.erb
@@ -1,2 +1,34 @@
-<h1>Pages#home</h1>
-<p>Find me in app/views/pages/home.html.erb</p>
+<div id="fullpage">
+	<div class="section section-header">HELLO</div>
+	<div class="section section-header"><a id="about-me">ABOUT ME</a></div>
+	<div class="section section-header"><a id="projects">PROJECTS</a></div>
+  <br>
+  <br>
+  <br>
+  <br>
+  <br>
+  <br>
+  <br>
+  <br>
+  <br>
+  <br>
+  <br>
+  <br>
+  <br>
+  <br>
+  <br>
+  <br>
+  <br>
+  <br>
+  <br>
+  <br>
+  <br>
+  <br>
+  <br>
+  <br>
+  <br>
+  <br>
+  <br>
+  <br>
+	<div class="section section-header"><a id="contact">CONTACT</a></div>
+</div>
