--- a/app/assets/stylesheets/components/_navbar.scss
+++ b/app/assets/stylesheets/components/_navbar.scss
@@ -1,12 +1,40 @@
-.navbar-lewagon {
+// .navbar-lewagon {
+//   justify-content: space-between;
+//   background: white;
+// }
+
+// .navbar-lewagon .navbar-collapse {
+//   flex-grow: 0;
+// }
+
+// .navbar-lewagon .navbar-brand img {
+//   width: 40px;
+// }
+
+.top-navbar {
+  display: flex;
+  justify-content: flex-end;
+  width: 100%;
+  height: 56px;
+  font-family: "Roboto Mono";
+  position: fixed;
+  top: 0;
+  margin-bottom: 16px;
+}
+
+.navbar-links {
+  width: 25%;
+  display: flex;
+  align-items: center;
   justify-content: space-between;
-  background: white;
-}
-
-.navbar-lewagon .navbar-collapse {
-  flex-grow: 0;
-}
-
-.navbar-lewagon .navbar-brand img {
-  width: 40px;
+  margin: auto 0;
+  padding-right: 16px;
+  li {
+    list-style: none;
+  }
+  a {
+    text-decoration: none;
+    color: black;
+    font-weight: 500;
+  }
 }
