--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -6,11 +6,16 @@
     <%= csrf_meta_tags %>
     <%= csp_meta_tag %>
 
+    <link rel="preconnect" href="https://fonts.googleapis.com"><link rel="preconnect" href="https://fonts.gstatic.com" crossorigin><link href="https://fonts.googleapis.com/css2?family=Barlow:wght@300;400;500;600&family=Chivo+Mono:wght@300;400;500;600&family=Libre+Baskerville&family=Martel&family=Martian+Mono:wght@300;400;500&family=Nanum+Gothic:wght@400;700&family=Nunito:wght@300;400;500;600;700&family=Open+Sans:wght@300;400;500;600&family=Poppins:wght@200;400;500;600&family=Quicksand:wght@300;400&family=Raleway:wght@300;400;500;600;700&family=Roboto+Mono:wght@300;400;500;600;700&family=Rubik:wght@300;400;500;600&family=Source+Code+Pro:wght@400;500;600;700&family=Source+Sans+Pro:wght@300;400&display=swap" rel="stylesheet">
+
+
+
     <%= stylesheet_link_tag "application", "data-turbo-track": "reload" %>
     <%= javascript_include_tag "application", "data-turbo-track": "reload", defer: true %>
   </head>
 
   <body>
+    <%= render "shared/navbar" %>
     <%= yield %>
   </body>
 </html>
