--- a/app/views/pages/home.html.erb
+++ b/app/views/pages/home.html.erb
@@ -1,34 +1,50 @@
-<div id="fullpage">
-	<div class="section section-header">HELLO</div>
-	<div class="section section-header"><a id="about-me">ABOUT ME</a></div>
-	<div class="section section-header"><a id="projects">PROJECTS</a></div>
-  <br>
-  <br>
-  <br>
-  <br>
-  <br>
-  <br>
-  <br>
-  <br>
-  <br>
-  <br>
-  <br>
-  <br>
-  <br>
-  <br>
-  <br>
-  <br>
-  <br>
-  <br>
-  <br>
-  <br>
-  <br>
-  <br>
-  <br>
-  <br>
-  <br>
-  <br>
-  <br>
-  <br>
-	<div class="section section-header"><a id="contact">CONTACT</a></div>
+<div class="fullpage" data-controller="scroll">
+	<div class="section one">
+    <div>
+      <h1 class="section-header header-upper">HELLO</h1>
+    </div>
+    <div>
+
+    </div>
+  </div>
+
+	<div class="section two">
+    <div>
+    </div>
+    <div>
+      <h1 class="section-header header-lower"><a id="about-me">ABOUT ME</a></h1>
+    </div>
+  </div>
+
+	<div class="section three">
+    <div>
+      <h1 class="section-header header-upper"><a id="projects">PROJECTS</a><h1>
+    </div>
+    <div>
+      <div class="project-card">
+          <h3>Fan Find</h3>
+          <i class="fa-solid fa-square-plus"></i>
+      </div>
+      <div class="project-card">
+          <h3>shART</h3>
+          <i class="fa-solid fa-square-plus"></i>
+      </div>
+      <div class="project-card">
+          <h3>Watchlist</h3>
+          <i class="fa-solid fa-square-plus"></i>
+      </div>
+    </div>
+  </div>
+
+	<div class="section four header-lower">
+    <div>
+      <p><i class="fa-solid fa-envelope"></i>jesspates@hotmail.com</p>
+      <p><a href="https://www.linkedin.com/in/jess-pates/" target="_blank"><i class="fa-brands fa-linkedin"></i>jess-pates</a></p>
+      <p><a href="https://github.com/jpates2" target="_blank"><i class="fa-brands fa-square-github"></i>jpates2</a></p>
+    </div>
+    <div>
+      <h1 class="section-header"><a id="contact">CONTACT</a></h1>
+    </div>
+  </div>
+
 </div>
