--- a/app/views/shared/_navbar.html.erb
+++ b/app/views/shared/_navbar.html.erb
@@ -1,4 +1,4 @@
-<div class="top-navbar">
+<div class="navbar fixed-top navbar-background">
   <ul class="navbar-links">
     <li><a href="#about-me">about me</a></li>
     <li><a href="#projects">projects</a></li>
