--- a/app/assets/stylesheets/components/_card.scss
+++ b/app/assets/stylesheets/components/_card.scss
@@ -4,13 +4,14 @@
   height: 10vh;
   margin-bottom: 24px;
   padding: 16px;
-  // border-radius: 4px;
   display: flex;
   align-items: center;
   justify-content: space-between;
+  box-shadow: 0 0 15px 10px rgba(0,0,0,0.2);
   h3 {
     font-family: "Roboto Mono";
     font-size: 24px;
+    margin: 0px;
   }
   .fa-solid {
     font-size: 32px;
