heading underlines added

--- a/app/assets/stylesheets/components/_header.scss
+++ b/app/assets/stylesheets/components/_header.scss
@@ -1,4 +1,9 @@
 .section-header {
   font-size: 64px;
-  font-family: "Roboto Mono"
+  font-family: "Roboto Mono";
+  text-align: center;
+}
+
+.header-container{
+  width: 95%;
 }
