--- a/app/views/pages/home.html.erb
+++ b/app/views/pages/home.html.erb
@@ -9,7 +9,7 @@
     </div>
     <script>
         var typed = new Typed(".typed",{
-        strings: [,  "Welcome to my profile","Nice to meet you, my name is Jess","I'm a Fullstack Web Developer in training","Scroll down to find out more"],
+        strings: [,  "Welcome to my profile","Nice to meet you, my name is Jess","I'm a FS Web Developer in training","Scroll down to find out more"],
         typeSpeed: 40,
         backSpeed: 10,
         loop: true
@@ -51,8 +51,8 @@
     <div class="section-content">
       <div>
         <p><i class="fa-solid fa-envelope"></i>jesspates@hotmail.com</p>
-        <p><a href="https://www.linkedin.com/in/jess-pates/" target="_blank"><i class="fa-brands fa-linkedin"></i>jess-pates</a></p>
-        <p><a href="https://github.com/jpates2" target="_blank"><i class="fa-brands fa-square-github"></i>jpates2</a></p>
+        <a href="https://www.linkedin.com/in/jess-pates/" target="_blank"><p class="contact-icon"><i class="fa-brands fa-linkedin"></i>jess-pates</p></a>
+        <a href="https://github.com/jpates2" target="_blank"><p class="contact-icon"><i class="fa-brands fa-square-github"></i>jpates2</p></a>
       </div>
     </div>
     <div class="header-container">
