--- a/app/views/pages/home.html.erb
+++ b/app/views/pages/home.html.erb
@@ -50,7 +50,7 @@
 	<div class="section four header-lower">
     <div class="section-content">
       <div>
-        <p><i class="fa-solid fa-envelope"></i>jesspates@hotmail.com</p>
+        <p><i class="fa-solid fa-envelope"></i>jesspates@hotmail.co.uk</p>
         <a href="https://www.linkedin.com/in/jess-pates/" target="_blank"><p class="contact-icon"><i class="fa-brands fa-linkedin"></i>jess-pates</p></a>
         <a href="https://github.com/jpates2" target="_blank"><p class="contact-icon"><i class="fa-brands fa-square-github"></i>jpates2</p></a>
       </div>
