--- a/app/views/pages/home.html.erb
+++ b/app/views/pages/home.html.erb
@@ -33,8 +33,11 @@
     </div>
     <div class="section-content">
       <div class="project-card">
+        <div class="d-flex">
+          <%= link_to image_tag('fanfind.png'), class: "project-logo" %>
           <h3>Fan Find</h3>
-          <i class="fa-solid fa-square-plus"></i>
+        </div>
+        <i class="fa-solid fa-square-plus"></i>
       </div>
       <div class="project-card">
           <h3>shART</h3>
