--- a/app/views/pages/home.html.erb
+++ b/app/views/pages/home.html.erb
@@ -33,18 +33,24 @@
     </div>
     <div class="section-content">
       <div class="project-card">
-        <div class="d-flex">
+        <div class="project-title">
           <%= link_to image_tag('fanfind.png'), class: "project-logo" %>
           <h3>Fan Find</h3>
         </div>
         <i class="fa-solid fa-square-plus"></i>
       </div>
       <div class="project-card">
+        <div class="project-title">
+          <%= link_to image_tag('shart.png'), class: "project-logo" %>
           <h3>shART</h3>
-          <i class="fa-solid fa-square-plus"></i>
+        </div>
+        <i class="fa-solid fa-square-plus"></i>
       </div>
       <div class="project-card">
+        <div class="project-title">
+          <i class="fa-solid fa-clapperboard"></i>
           <h3>Watchlist</h3>
+        </div>
           <i class="fa-solid fa-square-plus"></i>
       </div>
     </div>
