fanfind link added to card icon and title

--- a/app/views/pages/home.html.erb
+++ b/app/views/pages/home.html.erb
@@ -32,13 +32,17 @@
       <hr>
     </div>
     <div class="section-content">
-      <div class="project-card">
-        <div class="project-title">
-          <%= link_to image_tag('fanfind.png'), class: "project-logo" %>
-          <h3>Fan Find</h3>
+
+
+        <div class="project-card">
+          <div class="project-title">
+            <%= link_to image_tag('fanfind.png'), "https://www.fan-find.com", target: "_blank", class: "project-logo" %>
+            <h3><a href="https://www.fan-find.com", target="_blank">Fan Find</a></h3>
+          </div>
+          <i class="fa-solid fa-square-plus"></i>
         </div>
-        <i class="fa-solid fa-square-plus"></i>
-      </div>
+
+
       <div class="project-card">
         <div class="project-title">
           <%= link_to image_tag('shart.png'), class: "project-logo" %>
@@ -46,6 +50,8 @@
         </div>
         <i class="fa-solid fa-square-plus"></i>
       </div>
+
+
       <div class="project-card">
         <div class="project-title">
           <i class="fa-solid fa-clapperboard"></i>
@@ -53,6 +59,7 @@
         </div>
           <i class="fa-solid fa-square-plus"></i>
       </div>
+
     </div>
   </div>
 
