--- a/app/views/pages/home.html.erb
+++ b/app/views/pages/home.html.erb
@@ -63,7 +63,7 @@
         <div>
           <a class="collapsible" onclick="changeIcon(this)"><i class="fa-solid fa-square-plus"></i></a>
           <p class="collapsible-content">Site for organising movies into lists based on genre. Users can browse lists, create a new list and add a movie to any list. Built using Ruby on Rails, HTML, CSS and Javascript. <br> Solo project.</p>
-          </div>
+        </div>
       </div>
 
     </div>
@@ -75,6 +75,7 @@
         <p><i class="fa-solid fa-envelope"></i>jesspates@hotmail.co.uk</p>
         <a href="https://www.linkedin.com/in/jess-pates/" target="_blank"><p class="contact-icon"><i class="fa-brands fa-linkedin"></i>jess-pates</p></a>
         <a href="https://github.com/jpates2" target="_blank"><p class="contact-icon"><i class="fa-brands fa-square-github"></i>jpates2</p></a>
+        <a href="https://drive.google.com/file/d/1D0n-sqHP0OAk5oDHzf0p4ymQivbwQPaN/view?usp=sharing" target="_blank"><p class="contact-icon"><i class="fa-solid fa-file"></i>CV</p></a>
       </div>
     </div>
     <div class="header-container">
