--- a/app/views/pages/home.html.erb
+++ b/app/views/pages/home.html.erb
@@ -19,6 +19,15 @@
 
 	<div class="section two">
     <div class="section-content">
+      <div class="photo-container">
+        <%= image_tag('photo.jpeg', class: "profile-photo") %>
+        <%= image_tag('LeWagon-74.jpeg', class: "profile-photo") %>
+        <%= image_tag('profile2.jpeg', class: "profile-photo") %>
+      </div>
+      <div id="profile-text">
+        <p>My name is Jess Pates. </p>
+        <p>I'm a British citizen - raised in Manchester but more recently a long time London resident. Currently I live in sunny Barcelona. I can work within the UK but would require a visa to work elsewhere. Open to any locations / hybrid working / fully remote.</p>
+      </div>
     </div>
     <div class="header-container">
       <h1 class="section-header header-lower"><a id="about-me">ABOUT ME</a></h1>
