--- a/app/views/pages/home.html.erb
+++ b/app/views/pages/home.html.erb
@@ -25,8 +25,11 @@
         <%= image_tag('profile2.jpeg', class: "profile-photo") %>
       </div>
       <div id="profile-text">
-        <p>My name is Jess Pates. </p>
+        <p>My name is Jess Pates. I completed the Web Development bootcamp at Le Wagon in December 2022. I started with very little prior coding experience so it made for a steep learning curve. Over nine intense weeks I begun to learn Ruby on Rails, SQL, HTML, CSS and Javascript. The culmination was two group projects: an AirBnb style market place, and a mobile first Ruby application designed to bring together football fans.</p>
+        <p>Beforehand I worked in financial services operations for a number of banks and hedge funds. I quickly became used to working in fast paced environments and managing multiple deadlines. I particularly enjoyed working for smaller hedge funds where I had greater autonomy and had to take the iniative to solve problems. I enjoyed working in the industry and gaining knowledge along the way. However, I came to realise this wasn't an industry I wanted to work in for the rest of my career. After doing some online tutorials in HTML and CSS I decided to commit more time and energy and enrolled in a Web Development bootcamp. I enjoy the challenge of finding solutions, the fact there is always something new to learn, and the opportunity to be creative whilst working logically.</p>
+        <p>I'm now searching for a developer role at a junior / graduate / intern / apprentice level. Open to full stack / front end / back end positions.</p>
         <p>I'm a British citizen - raised in Manchester but more recently a long time London resident. Currently I live in sunny Barcelona. I can work within the UK but would require a visa to work elsewhere. Open to any locations / hybrid working / fully remote.</p>
+        <p>Please get in touch if you would like to chat or have any suitable positions available.</p>
       </div>
     </div>
     <div class="header-container">
