home added to navbar

--- a/app/views/pages/home.html.erb
+++ b/app/views/pages/home.html.erb
@@ -1,7 +1,7 @@
 <div class="fullpage">
 	<div class="section one" data-controller="typed">
     <div class="header-container">
-      <h1 class="section-header header-upper">HELLO</h1>
+      <h1 class="section-header header-upper"><a id="home">HELLO</a></h1>
       <hr>
     </div>
     <div id="typed-strings" class="section-content">
