--- a/app/views/shared/_navbar.html.erb
+++ b/app/views/shared/_navbar.html.erb
@@ -1,5 +1,6 @@
 <div class="navbar fixed-top navbar-background">
   <ul class="navbar-links">
+    <li><a href="#home">home</a></li>
     <li><a href="#about-me">about me</a></li>
     <li><a href="#projects">projects</a></li>
     <li><a href="#contact">contact</a></li>
