responsive design for profile

--- a/app/assets/stylesheets/pages/_home.scss
+++ b/app/assets/stylesheets/pages/_home.scss
@@ -87,7 +87,7 @@ hr {
 
 #profile-text {
   text-align: justify;
-  margin: 16px;
+  margin: 16px 16px 0px 16px;
   p {
     margin-bottom: 8px;
     font-size: 14px;
