--- a/app/views/pages/home.html.erb
+++ b/app/views/pages/home.html.erb
@@ -21,8 +21,8 @@
     <div class="section-content">
       <div class="photo-container">
         <%= image_tag('photo.jpeg', class: "profile-photo") %>
-        <%= image_tag('LeWagon-74.jpeg', class: "profile-photo") %>
-        <%= image_tag('profile2.jpeg', class: "profile-photo") %>
+        <%= image_tag('LeWagon-74.jpeg', class: "profile-photo photo-hide") %>
+        <%= image_tag('profile2.jpeg', class: "profile-photo photo-hide") %>
       </div>
       <div id="profile-text">
         <p>My name is Jess Pates. I completed the Web Development bootcamp at Le Wagon in December 2022. I started with very little prior coding experience so it made for a steep learning curve. Over nine intense weeks I begun to learn Ruby on Rails, SQL, HTML, CSS and Javascript. The culmination was two group projects: an AirBnb style market place, and a mobile first Ruby application designed to bring together football fans.</p>
