--- a/app/assets/stylesheets/pages/_media.scss
+++ b/app/assets/stylesheets/pages/_media.scss
@@ -1,4 +1,4 @@
-@media (max-width: 800px) {
+@media (max-width: 900px) {
   .section {
     display: flex;
     flex-direction: column;
@@ -8,7 +8,7 @@
   }
 }
 
-@media (max-width: 800px) {
+@media (max-width: 900px) {
   .one {
     background-color: #FABC3C;
     margin-top: 40%;
@@ -25,37 +25,73 @@
   }
 }
 
-@media (max-width: 800px) {
+@media (max-width: 900px) {
   #typed-strings {
     align-items: center;
   }
 }
 
-@media (max-width: 800px) {
-  .two {
-    height: 160vh;
-  }
-  .photo-hide {
-    display: none;
-  }
-}
-
-@media (max-width: 800px) {
+@media (max-width: 900px) {
   .two .header-container {
     order: 1;
-    // margin-top: -60px;
+    flex-shrink: 1;
   }
   .two .section-content {
     order: 2;
-  }
-  .two .photo-container {
-    margin-top: -100px;
-    margin-bottom: 24px;
+    flex-grow: 1;
   }
   .four .header-container {
     order: 1;
   }
   .four .section-content {
     order: 2;
+  }
+}
+
+@media (max-width: 1200px) and (min-width: 1000px) {
+  .two .header-container{
+    flex: 60%;
+  }
+}
+
+@media (max-width: 1000px) and (min-width: 900px) {
+  .two .header-container{
+    flex: 50%;
+  }
+}
+
+@media (max-width: 900px) {
+  .two .header-container {
+    margin-top: 100px;
+  }
+}
+
+@media (max-width: 600px) {
+  .photo-hide {
+    display: none;
+  }
+}
+
+@media (max-width: 600px) and (min-width: 500px) {
+  .two {
+    height: 120vh;
+  }
+}
+
+@media (max-width: 500px) and (min-width: 420px) {
+  .two {
+    height: 130vh;
+  }
+}
+
+@media (max-width: 420px) and (min-width: 390px) {
+  .two {
+    height: 140vh;
+  }
+}
+
+@media (max-width: 390px) {
+  .two {
+    height: 150vh;
   }
 }
