--- a/app/views/pages/home.html.erb
+++ b/app/views/pages/home.html.erb
@@ -58,8 +58,8 @@
 
       <div class="project-card">
         <div class="project-title">
-          <%= link_to image_tag('shart.png'), class: "project-logo" %>
-          <h3 class="project-header">shART</h3>
+          <%= link_to image_tag('shart.png'), "https://shart-jpates2.herokuapp.com/", target: "_blank", class: "project-logo" %>
+          <a href="https://shart-jpates2.herokuapp.com/", target="_blank"><h3 class="project-header">shART</h3></a>
         </div>
         <div>
           <a class="collapsible" onclick="changeIcon(this)"><i class="fa-solid fa-square-plus"></i></a>
