--- a/app/views/pages/home.html.erb
+++ b/app/views/pages/home.html.erb
@@ -69,8 +69,10 @@
 
       <div class="project-card">
         <div class="project-title">
-          <i class="fa-solid fa-clapperboard"></i>
-          <h3 class="project-header">Watchlist</h3>
+          <%= link_to "https://watchlist-bcn1046.herokuapp.com/", target: "_blank" do %>
+            <i class="fa-solid fa-clapperboard"></i>
+          <% end %>
+          <a href="https://watchlist-bcn1046.herokuapp.com/", target="_blank"><h3 class="project-header">Watchlist</h3></a>
         </div>
         <div>
           <a class="collapsible" onclick="changeIcon(this)"><i class="fa-solid fa-square-plus"></i></a>
