html structure added for profile modal windows

--- a/app/views/pages/home.html.erb
+++ b/app/views/pages/home.html.erb
@@ -24,17 +24,38 @@
         <%= image_tag('LeWagon-74.jpeg', class: "profile-photo photo-hide") %>
         <%= image_tag('profile2.jpeg', class: "profile-photo photo-hide") %>
       </div>
+
       <div id="profile-text">
-        <p>My name is Jess Pates. I completed the Web Development bootcamp at Le Wagon in December 2022. Over nine intense weeks I begun to learn Ruby on Rails, SQL, HTML, CSS and Javascript.</p>
-        <p>Beforehand I worked in financial services operations for a number of banks and hedge funds. I'm accustomed to working in fast paced environments and managing multiple deadlines. I particularly enjoyed working for smaller companies where I had greater autonomy and could take the iniative to solve problems.<p>
-        <p>I've decided to switch careers as I'd like to feel greater passion towards my job. Coding offers so many opportunities to learn and I'm excited to develop my skills.
-        <p>I'm now searching for a developer role at a junior / graduate / intern / apprentice level. Open to full stack / front end / back end positions.</p>
-        <p>Please get in touch if you would like to chat or have any suitable positions available.</p>
+
+        <button class="show-window">About me</button>
+        <button class="show-window">About my experience</button>
+        <button class="show-window">About my future</button>
+
+        <div class = "window hidden">
+          <h3>About me</h3>
+          <p>My name is Jess Pates. I completed the Web Development bootcamp at Le Wagon in December 2022. Over nine intense weeks I begun to learn Ruby on Rails, SQL, HTML, CSS and Javascript.</p>
+        </div>
+
+        <div class = "window hidden">
+          <h3>About my experience</h3>
+          <p>Beforehand I worked in financial services operations for a number of banks and hedge funds. I'm accustomed to working in fast paced environments and managing multiple deadlines. I particularly enjoyed working for smaller companies where I had greater autonomy and could take the iniative to solve problems.<p>
+        </div>
+
+        <div class = "window hidden">
+          <h3>About my future</h3>
+          <p>I've decided to switch careers as I'd like to feel greater passion towards my job. Coding offers so many opportunities to learn and I'm excited to develop my skills.
+          <p>I'm now searching for a developer role at a junior / graduate / intern / apprentice level. Open to full stack / front end / back end positions.</p>
+          <p>Please get in touch if you would like to chat or have any suitable positions available.</p>
+        </div>
+
         <!-- <p>I'm a British citizen - raised in Manchester but more recently a long time London resident. Currently I live in sunny Barcelona. I can work within the UK but would require a visa to work elsewhere. Open to any locations / hybrid working / fully remote.</p>
         I enjoy the challenge of finding solutions and the opportunity to be creative whilst working logically.
         The culmination was two group projects: an AirBnb style market place, and a mobile first Ruby application designed to bring together football fans. -->
+
       </div>
+
     </div>
+
     <div class="header-container">
       <h1 class="section-header header-lower"><a id="about-me">ABOUT ME</a></h1>
       <hr>
