click event added to show modal windows

--- a/app/assets/stylesheets/components/_windows.scss
+++ b/app/assets/stylesheets/components/_windows.scss
@@ -1,3 +1,10 @@
 .hidden {
   display: none;
 }
+
+.show-window {
+  background-color: black;
+  color: white;
+  border-style: none;
+  font-family: "Roboto Mono";
+}
