--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -6,7 +6,7 @@
     <%= csrf_meta_tags %>
     <%= csp_meta_tag %>
     <script src="https://cdn.jsdelivr.net/npm/typed.js@2.0.12"></script>
-    <script src="typed.js"></script>
+    <%# <script src="typed.js"></script> %>
     <link rel="preconnect" href="https://fonts.googleapis.com">
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
     <link href="https://fonts.googleapis.com/css2?family=Exo:wght@300;400;500&family=Libre+Baskerville&family=Libre+Franklin:wght@300;400;500&family=Martel&family=Overpass:wght@300;400;500&family=Poppins:wght@200;400;500;600&display=swap" rel="stylesheet">
@@ -14,6 +14,7 @@
     <link href="https://fonts.googleapis.com/css2?family=Barlow:wght@300;400;500;600&family=Chivo+Mono:wght@300;400;500;600&family=Libre+Baskerville&family=Martel&family=Martian+Mono:wght@300;400;500&family=Nanum+Gothic:wght@400;700&family=News+Cycle:wght@400;700&family=Nunito:wght@300;400;500;600;700&family=Open+Sans:wght@300;400;500;600&family=Poppins:wght@200;400;500;600&family=Quicksand:wght@300;400&family=Raleway:wght@300;400;500;600;700&family=Roboto+Condensed:wght@300;400&family=Roboto+Mono:wght@300;400;500;600;700&family=Rubik:wght@300;400;500;600&family=Source+Code+Pro:wght@400;500;600;700&family=Source+Sans+Pro:wght@300;400&display=swap" rel="stylesheet">
     <%= stylesheet_link_tag "application", "data-turbo-track": "reload" %>
     <%= javascript_include_tag "application", "data-turbo-track": "reload", defer: true %>
+    <%# <%= javascript_include_tag "script", "data-turbo-track": "reload", defer: true %>
   </head>
 
   <body>
